--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
     "bitcoin-node-api": "0.1.0",
-    "request": "2.74.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "jsonminify": "0.2.3",
+    "jstransformer-markdown-it": "^2.1.0",
     "mongodb": "2.0.45",
-    "mongoose": "4.1.10",
-    "markdown-js": "0.0.3",
-    "qr-image": "~2.0.0"
+    "mongoose": "^5.6.9",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.4",
+    "qr-image": "~2.0.0",
+    "request": "^2.88.0",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
-    "jasmine": "~2.1.0"
+    "jasmine": "^3.4.0"
   }
 }
