--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "async": "^3.1.0",
     "big-integer": "^1.6.44",
     "bignumber.js": "^9.0.0",
-    "bitcoin-node-api": "0.1.0",
+    "bitcoin-rpc-api": "0.0.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
